<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:id="@+id/chat_sdk_root_view"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.braunster.chatsdk.activities.ChatSDKLoginActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
...
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bgu_logo"
            android:id="@+id/app_icon"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_above="@id/chat_sdk_et_mail"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:nextFocusDown="@+id/chat_sdk_et_password"
            android:id="@+id/chat_sdk_et_mail"
            android:gravity="center"
            android:layout_above="@id/chat_sdk_et_password"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:hint="@string/email" />
...
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/chat_sdk_et_password"
            android:layout_above="@+id/linear_buttons"
            android:layout_alignLeft="@+id/chat_sdk_et_mail"
            android:layout_alignStart="@+id/chat_sdk_et_mail"
            android:hint="@string/password"
            android:gravity="center"/>

        <LinearLayout
...
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                style="@style/LoginButtonsStyle"
                android:background="@drawable/chat_sdk_login_button_selector"
                android:id="@+id/chat_sdk_btn_login"
                android:layout_weight="1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                style="@style/LoginButtonsStyle"
                android:background="@drawable/chat_sdk_register_button_selector"
                android:id="@+id/chat_sdk_btn_register"
                android:layout_weight="1"/>
        </LinearLayout>
<!--
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
