...
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:id="@+id/linear"
            android:layout_weight="3"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="Name"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:id="@+id/chat_sdk_et_name"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/chat_sdk_ic_name"
                    android:layout_gravity="center_horizontal" />

...
