<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/list_threads"
        android:scrollbars="none"
        android:visibility="visible"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:visibility="visible"
        style="@style/TextViewStyle"
        android:text="@string/searching_nearby_threads"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chat_sdk_progress_bar"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>